[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "opera_disp_tms"
requires-python = ">=3.10"
authors = [
    {name="tools-bot", email="UAF-asf-apd@alaska.edu"},
]
description = "Package for create OPERA-DISP tile map creation"
license = {text = "BSD-3-Clause"}
classifiers=[
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "gdal",
    "boto3",
    "asf_search",
    # "sqlite3", Not sure why including this breaks installs
    "shapely",
    "pyproj",
    "h5py",
    "s3fs",
]
dynamic = ["version", "readme"]

[project.optional-dependencies]
develop = [
    "flake8",
    "flake8-import-order",
    "flake8-blind-except",
    "flake8-builtins",
    "pytest",
    "pytest-cov",
    "pytest-console-scripts",
]

[project.urls]
Homepage = "https://github.com/ASFHyP3/OPERA-DISP-TMS"
Documentation = "https://github.com/ASFHyP3/opera-disp-tms/tree/develop?tab=readme-ov-file#opera-disp-tms"

[project.scripts]
generate_frame_tile = "opera_disp_tms.generate_frame_tile:main"
generate_sw_disp_tile = "opera_disp_tms.generate_sw_disp_tile:main"
get_tmp_s3_creds = "opera_disp_tms.tmp_s3_access:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
script_launch_mode = "subprocess"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
